Still a few issues with signup, fixing tomorrow
